Fix responsividad y logueo con google

--- a/.env
+++ b/.env
@@ -50,7 +50,7 @@ DEBUG=modernchat:*
 # Google OAuth Configuration
 GOOGLE_CLIENT_ID=847703838664-91srgfpsr637a137ddqm4vf49g75gdsi.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-GOOGLE_CALLBACK_URL=http://localhost:3000/api/auth/google/callback
+# GOOGLE_CALLBACK_URL se configura dinámicamente según el entorno
 
 # Session Secret for Passport
 SESSION_SECRET=mi-session-secret-super-segura-para-oauth-2024
